Mejorando la presentación del sitio web
Modifique el color de fondo y agregue lorem ipsum

--- a/index.htm
+++ b/index.htm
@@ -12,5 +12,6 @@
     <h2>Es el mejor sitio del mundo</h2>
     <h2 id="duda">No les quepa la <span>menor</span> duda</h2>
     <h2>Me arriesgo a las comparaciones</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis error, nam ad dignissimos sunt accusamus totam ullam quis id est fugit optio libero, natus eaque quas non sint laborum cum!</p>
 </body>
 </html>
